--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   firebase_auth: ^4.11.1
   cloud_firestore: ^4.11.0
   firebase_storage: ^11.3.1
+  shared_preferences: ^2.2.2
+  pinput: ^3.0.1
 
 dev_dependencies:
   flutter_test:
