--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_storage: ^11.3.1
   shared_preferences: ^2.2.2
   pinput: ^3.0.1
+  image_picker: ^1.0.4
 
 dev_dependencies:
   flutter_test:
